--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.26.0",
-    "mongoose": "^5.9.16"
+    "mongoose": "^5.9.16",
+    "mongoose-paginate": "^5.0.3"
   }
 }
